schema/testdata/errors/identity_backlinks_no_relations_attribute.keel
model CompanyEmployee {
    fields {
        abcIdentity Identity @unique
        //expect-error:9:20:RelationshipError:Cannot associate with field 'companyEmployee' on Identity to form a one to one relationship because it is already associated with 'abcIdentity'
        xyzIdentity Identity @unique
    }
}
